<resources>
    <string name="app_name">Geo_Quiz</string>
    <string name="Question_Austraila">Canbarra is the capatal of Austrilla</string>
    <string name="truth">Truth</string>
    <string name="False">False</string>
    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">Incorrect</string>
    <string name="questions_Oceans">The pacific Ocean is longer than the Alantic. Ocean</string>
    <string name="Question_Midwest">The suez canal connects to the red sea.</string>
    <string name="Question_America">The amazon River is the longest river.</string>
    <string name="Question_Africa">The soucrce of nile river is the longest river</string>
    <string name="Question_Asia">The lake baiken is the worlds oldest lake</string>
    <string name="trueeee">Trueeee</string>
    <string name="falsee">Falsee</string>
    <string name="awnser">Awnser</string>
    <string name="cheat">Cheat</string>
    <string name="next">Next</string>
    <string name="question">Question</string>
    <string name="cheating_is_wrong">Cheating_is_wrong</string>
    <string name="warning_text">Warning_Text</string>
    <string name="show_answer_button">Show_answer_Button</string>
    <string name="answer">answer</string>
</resources>